--- a/src/main/resources/org/mana/login.fxml
+++ b/src/main/resources/org/mana/login.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox alignment="CENTER" minWidth="320" prefHeight="500.0" prefWidth="600.0" spacing="20.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.mana.LoginController">
+<VBox alignment="CENTER" minWidth="320" prefHeight="500.0" prefWidth="600.0" spacing="20.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.mana.controller.LoginController">
    <children>
       <ImageView fitHeight="73.0" fitWidth="300.0" pickOnBounds="true" preserveRatio="true">
          <Image
