--- a/src/main/resources/org/mana/register.fxml
+++ b/src/main/resources/org/mana/register.fxml
@@ -1,16 +1,128 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Button?>
-<?import javafx.geometry.Insets?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.mana.controller.RegisterController">
+
+<VBox alignment="CENTER" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="org.mana.controller.RegisterController">
     <children>
-        <Label text="Secondary View" />
-        <Button fx:id="secondaryButton" text="Back" onAction="#openLogin" />
+        <ScrollPane>
+            <content>
+                <VBox alignment="CENTER">
+                    <children>
+                        <Label minWidth="630.0" styleClass="header" text="Register">
+                            <VBox.margin>
+                                <Insets/>
+                            </VBox.margin>
+                            <font>
+                                <Font name="System Bold" size="13.0"/>
+                            </font>
+                        </Label>
+                        <HBox maxWidth="630.0" minWidth="630.0" prefWidth="630.0">
+                            <children>
+                                <VBox>
+                                    <children>
+                                        <Label alignment="BOTTOM_LEFT" maxWidth="300.0" styleClass="item-title"
+                                               text="First Name"/>
+                                        <TextField maxWidth="300.0" minWidth="300.0" prefWidth="300.0"/>
+                                    </children>
+                                </VBox>
+                                <VBox>
+                                    <children>
+                                        <Label alignment="BOTTOM_LEFT" maxWidth="300.0" prefWidth="300.0"
+                                               styleClass="item-title" text="Last Name"/>
+                                        <TextField maxWidth="300.0" minWidth="300.0"/>
+                                    </children>
+                                    <HBox.margin>
+                                        <Insets left="30.0"/>
+                                    </HBox.margin>
+                                </VBox>
+                            </children>
+                            <VBox.margin>
+                                <Insets top="30.0"/>
+                            </VBox.margin>
+                        </HBox>
+                        <HBox maxWidth="630.0" minWidth="630.0" prefWidth="630.0">
+                            <children>
+                                <VBox>
+                                    <children>
+                                        <Label alignment="BOTTOM_LEFT" maxWidth="300.0" styleClass="item-title"
+                                               text="Date of Birth"/>
+                                        <DatePicker maxWidth="300.0" minWidth="300.0" prefWidth="300.0"
+                                                    promptText="m/d/yyyy"/>
+                                    </children>
+                                </VBox>
+                                <VBox>
+                                    <children>
+                                        <Label alignment="BOTTOM_LEFT" maxWidth="300.0" styleClass="item-title"
+                                               text="City"/>
+                                        <TextField maxWidth="300.0" minWidth="300.0" prefWidth="300.0"/>
+                                    </children>
+                                    <HBox.margin>
+                                        <Insets left="30.0"/>
+                                    </HBox.margin>
+                                </VBox>
+                            </children>
+                            <VBox.margin>
+                                <Insets top="30.0"/>
+                            </VBox.margin>
+                        </HBox>
+                        <HBox maxWidth="630.0" minWidth="630.0" prefWidth="630.0">
+                            <children>
+                                <VBox>
+                                    <children>
+                                        <Label alignment="BOTTOM_LEFT" maxWidth="300.0" styleClass="item-title"
+                                               text="Username"/>
+                                        <TextField maxWidth="300.0" minWidth="300.0" prefWidth="300.0"/>
+                                    </children>
+                                </VBox>
+                                <VBox>
+                                    <children>
+                                        <Label alignment="BOTTOM_LEFT" maxWidth="300.0" styleClass="item-title"
+                                               text="Password"/>
+                                        <PasswordField maxWidth="300.0" minWidth="300.0"/>
+                                    </children>
+                                    <HBox.margin>
+                                        <Insets left="30.0"/>
+                                    </HBox.margin>
+                                </VBox>
+                            </children>
+                            <VBox.margin>
+                                <Insets top="30.0"/>
+                            </VBox.margin>
+                        </HBox>
+                        <HBox alignment="CENTER_RIGHT" maxWidth="600.0" minWidth="630.0" prefWidth="600.0">
+                            <children>
+                                <Button fx:id="secondaryButton" cancelButton="true" onAction="#openLogin" text="Cancel">
+                                    <HBox.margin>
+                                        <Insets right="30.0"/>
+                                    </HBox.margin>
+                                    <padding>
+                                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                                    </padding>
+                                </Button>
+                                <Button defaultButton="true" mnemonicParsing="false" text="Register">
+                                    <HBox.margin>
+                                        <Insets/>
+                                    </HBox.margin>
+                                    <padding>
+                                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                                    </padding>
+                                </Button>
+                            </children>
+                            <VBox.margin>
+                                <Insets top="30.0"/>
+                            </VBox.margin>
+                        </HBox>
+                    </children>
+                    <padding>
+                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+                    </padding>
+                </VBox>
+            </content>
+        </ScrollPane>
     </children>
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-    </padding>
 </VBox>
